--- a/src/styles.css
+++ b/src/styles.css
@@ -10407,13 +10407,13 @@ input{
 .filterPill .button-color {
     color: rgb(0 0 0 / 64%);
    /* border: 1px solid #ebebeb;*/
-    margin-bottom: 12px;
+    margin-bottom: 10px;
     background-color: rgba(0,0,0,0.08);
-    font-weight: 600;
-    font-size: 17px;
+    /*font-weight: 600;*/
+    font-size: 15px;
     border-radius: 28px;
-    padding: 8px 20px;
-    margin-right: 16px;
+    /*padding: 8px 20px;*/
+    margin-right: 5px;
 }
 
 .filterPill button:hover{
