--- a/src/app/components/security/createpage/createpage.component.html
+++ b/src/app/components/security/createpage/createpage.component.html
@@ -7,7 +7,7 @@
         </header>
 
         <article class="card-body">
-          <form *ngIf="userType === 'LEGISLATOR'" [formGroup]="userCreationForm" (ngSubmit)="createUser()">
+          <form *ngIf="category === 'USER'" [formGroup]="userCreationForm" (ngSubmit)="createUser()">
             <div class="form-row">
               <div class="col form-group">
                 <label>Display Name</label>
@@ -25,131 +25,28 @@
             <div class="form-row">
               <div class="col form-group">
                 <label>First name</label>
-                <input type="text" class="form-control" placeholder="First name" formControlName="first_name" required/>
+                <input type="text" class="form-control" placeholder="First name" formControlName="firstName" required/>
               </div>
               <div class="col form-group">
                 <label>Last name</label>
-                <input type="text" class="form-control" placeholder="Last name" formControlName="last_name" required/>
+                <input type="text" class="form-control" placeholder="Last name" formControlName="lastName" required/>
               </div>
             </div>
 
             <div class="form-row">
               <div class="col form-group">
-                <label class="create-page-label">Party</label>
-                <app-gps-global-search  placeholder="Party" from="ceatePage" userType="party" (valueChange)='selectedParty($event)' [inputvalue]=""></app-gps-global-search>
-
-                <!-- <div class="ng-autocomplete create-page">
-                  <ng-autocomplete
-                    [data]="searchUsers"
-                    placeHolder="Party"
-                    (inputChanged) = "onChangeSearch($event)"
-                    [searchKeyword]="keyword"
-                    [itemTemplate]="itemTemplate"
-                    [notFoundTemplate]="notFoundTemplate">
-                  </ng-autocomplete>
-
-                  <ng-template #itemTemplate let-item>
-                    <div class="item">
-                      <img src="{{item.photoUrl}}" height="25">
-                      <span [innerHTML]="item.firstName"></span>
-                      <small></small>
-                    </div>
-                  </ng-template>
-
-                  <ng-template #notFoundTemplate let-notFound>
-                    <div [innerHTML]="notFound"></div>
-                  </ng-template>
-                </div> -->
-              </div>
-
-            </div>
-
-            <div class="form-row">
-              <div class="col form-group">
-                <label class="create-page-label">District</label>
-                <app-gps-global-search  placeholder="District" from="ceatePage" userType="district" (valueChange)='selectedDistrict($event)' [inputvalue]=""></app-gps-global-search>
-
-                <!-- <div class="ng-autocomplete create-page">
-                  <ng-autocomplete
-                    [data]="searchUsers"
-                    placeHolder="District"
-                    (inputChanged) = "onChangeSearch($event)"
-                    [searchKeyword]="keyword"
-                    [itemTemplate]="itemTemplate"
-                    [notFoundTemplate]="notFoundTemplate">
-                  </ng-autocomplete>
-
-                  <ng-template #itemTemplate let-item>
-                    <div class="item">
-                      <img src="{{item.photoUrl}}" height="25">
-                      <span [innerHTML]="item.firstName"></span>
-                      <small></small>
-                    </div>
-                  </ng-template>
-
-                  <ng-template #notFoundTemplate let-notFound>
-                    <div [innerHTML]="notFound"></div>
-                  </ng-template>
-                </div> -->
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="col form-group">
-                <label class="create-page-label">Chamber</label>
-                <app-gps-global-search  placeholder="Chamber" from="ceatePage" (valueChange)='selectedChamber($event)' userType="chamber" [inputvalue]=""></app-gps-global-search>
-              
-                <!-- <div class="ng-autocomplete create-page">
-                  <ng-autocomplete
-                    [data]="searchUsers"
-                    placeHolder="Chamber"
-                    (inputChanged) = "onChangeSearch($event)"
-                    [searchKeyword]="keyword"
-                    [itemTemplate]="itemTemplate"
-                    [notFoundTemplate]="notFoundTemplate">
-                  </ng-autocomplete>
-
-                  <ng-template #itemTemplate let-item>
-                    <div class="item">
-                      <img src="{{item.photoUrl}}" height="25">
-                      <span [innerHTML]="item.firstName"></span>
-                      <small></small>
-                    </div>
-                  </ng-template>
-
-                  <ng-template #notFoundTemplate let-notFound>
-                    <div [innerHTML]="notFound"></div>
-                  </ng-template>
-                </div> -->
+                <label>Description</label>
+                <ckeditor [config]="{ removeButtons: 'Maximize' }" (change)="onChange($event)" [ngModel]="editorData" (ngModelChange)="editorData= $event"  formControlName="description"></ckeditor>
               </div>
             </div>
 
             <div class="form-row">
               <div class="col form-group">
-                <label class="create-page-label">State</label>
-                <app-gps-global-search  placeholder="State" from="ceatePage" (valueChange)='selectedState($event)' userType="state" [inputvalue]=""></app-gps-global-search>
-
-                <!-- <div class="ng-autocomplete create-page">
-                  <ng-autocomplete
-                    [data]="searchUsers"
-                    placeHolder="State"
-                    (inputChanged) = "onChangeSearch($event)"
-                    [searchKeyword]="keyword"
-                    [itemTemplate]="itemTemplate"
-                    [notFoundTemplate]="notFoundTemplate">
-                  </ng-autocomplete>
-
-                  <ng-template #itemTemplate let-item>
-                    <div class="item">
-                      <img src="{{item.photoUrl}}" height="25">
-                      <span [innerHTML]="item.firstName"></span>
-                      <small></small>
-                    </div>
-                  </ng-template>
-
-                  <ng-template #notFoundTemplate let-notFound>
-                    <div [innerHTML]="notFound"></div>
-                  </ng-template>
-                </div> -->
+                <label>Access Restriction</label>
+                <div class="custom-control custom-switch">
+                  <input type="checkbox" class="custom-control-input" id="customSwitch1" formControlName="accessRestriction">
+                  <label class="custom-control-label" for="customSwitch1">Public[OFF] / Private[ON]</label>
+                </div>
               </div>
             </div>
 
@@ -158,7 +55,89 @@
             </div>
           </form>
 
-          <form *ngIf="userType === 'POLITICAL_PARTY'" [formGroup]="userCreationForm" (ngSubmit)="createUser()">
+          <form *ngIf="category === 'LEGISLATURE'" [formGroup]="userCreationForm" (ngSubmit)="createUser()">
+            <div class="form-row">
+              <div class="col form-group">
+                <label>Display Name</label>
+                <input type="text" class="form-control" placeholder="Display Name" formControlName="full_name"/>
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="col form-group">
+                <label>User Name</label>
+                <input type="text" class="form-control" placeholder="User Name" formControlName="username"/>
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="col form-group">
+                <label>First name</label>
+                <input type="text" class="form-control" placeholder="First name" formControlName="firstName" required/>
+              </div>
+              <div class="col form-group">
+                <label>Last name</label>
+                <input type="text" class="form-control" placeholder="Last name" formControlName="lastName" required/>
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="col form-group">
+                <label class="create-page-label">Party</label>
+                <app-gps-global-search  placeholder="Party" from="createPage" category="party" (valueChange)='selectedParty($event)' [inputvalue]=""></app-gps-global-search>
+
+              </div>
+
+            </div>
+
+            <div class="form-row">
+              <div class="col form-group">
+                <label class="create-page-label">District</label>
+                <app-gps-global-search  placeholder="District" from="createPage" category="district" (valueChange)='selectedDistrict($event)' [inputvalue]=""></app-gps-global-search>
+
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col form-group">
+                <label class="create-page-label">Role</label>
+                <app-gps-global-search  placeholder="Role" from="createPage" (valueChange)='selectedRole($event)' category="userType" [inputvalue]=""></app-gps-global-search>
+              
+
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="col form-group">
+                <label class="create-page-label">State</label>
+                <app-gps-global-search  placeholder="State" from="createPage" (valueChange)='selectedState($event)' category="state" [inputvalue]=""></app-gps-global-search>
+
+ 
+              </div>
+            </div>
+            
+            <div class="form-row">
+              <div class="col form-group">
+                <label>Description</label>
+                <ckeditor [config]="{ removeButtons: 'Maximize' }" (change)="onChange($event)" [ngModel]="editorData" (ngModelChange)="editorData= $event"  formControlName="description"></ckeditor>
+              </div>
+            </div>
+            
+            <div class="form-row">
+              <div class="col form-group">
+                <label>Access Restriction</label>
+                <div class="custom-control custom-switch">
+                  <input type="checkbox" class="custom-control-input" id="customSwitch1" formControlName="accessRestriction">
+                  <label class="custom-control-label" for="customSwitch1">Public[OFF] / Private[ON]</label>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <button type="submit" [disabled]="!userCreationForm.valid" class="btn btn-primary btn-block"> Continue  </button>
+            </div>
+          </form>
+
+          <form *ngIf="category === 'POLITICAL PARTY'" [formGroup]="userCreationForm" (ngSubmit)="createUser()">
             <div class="form-row">
               <div class="col form-group">
                 <label>Party Name</label>
@@ -176,8 +155,17 @@
             <div class="form-row">
               <div class="col form-group">
                 <label>Description</label>
-                <!-- <textarea type="text" class="form-control" placeholder="Description" formControlName="description"></textarea> -->
                 <ckeditor [config]="{ removeButtons: 'Maximize' }" (change)="onChange($event)" [ngModel]="editorData" (ngModelChange)="editorData= $event"  formControlName="description"></ckeditor>
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="col form-group">
+                <label>Access Restriction</label>
+                <div class="custom-control custom-switch">
+                  <input type="checkbox" class="custom-control-input" id="customSwitch1" formControlName="accessRestriction">
+                  <label class="custom-control-label" for="customSwitch1">Public[OFF] / Private[ON]</label>
+                </div>
               </div>
             </div>
 
@@ -186,7 +174,7 @@
             </div>
           </form>
 
-          <form *ngIf="userType === 'LEGISLATIVE_DISTRICT'" [formGroup]="userCreationForm" (ngSubmit)="createUser()">
+          <form *ngIf="category === 'LEGISLATIVE DISTRICT'" [formGroup]="userCreationForm" (ngSubmit)="createUser()">
             <div class="form-row">
               <div class="col form-group">
                 <label>District Name</label>
@@ -204,7 +192,6 @@
             <div class="form-row">
               <div class="col form-group">
                 <label>Description</label>
-                <!--<textarea type="text" class="form-control" placeholder="Description" formControlName="description"></textarea>-->
 
                 <ckeditor [config]="{ removeButtons: 'Maximize' }" (change)="onChange($event)" [ngModel]="editorData" (ngModelChange)="editorData= $event"  formControlName="description"></ckeditor>
 
@@ -228,7 +215,7 @@
             </div>
           </form>
 
-          <form *ngIf="userType === 'GROUP'" [formGroup]="userCreationForm" (ngSubmit)="createUser()">
+          <form *ngIf="category === 'GROUP'" [formGroup]="userCreationForm" (ngSubmit)="createUser()">
             <div class="form-row">
               <div class="col form-group">
                 <label>Group Name</label>
@@ -246,7 +233,6 @@
             <div class="form-row">
               <div class="col form-group">
                 <label>Description</label>
-                <!-- <textarea type="text" class="form-control" placeholder="Description" formControlName="description"></textarea> -->
                 <ckeditor [config]="{ removeButtons: 'Maximize' }" (change)="onChange($event)" [ngModel]="editorData" (ngModelChange)="editorData= $event"  formControlName="description"></ckeditor>
               </div>
             </div>
