--- a/src/app/components/security/createpage/createpageselection/createpageselection.component.html
+++ b/src/app/components/security/createpage/createpageselection/createpageselection.component.html
@@ -40,6 +40,20 @@
             </div>
 
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+              <button class="btn-1" (click)="loadcreatepage($event,'person')">
+                <span>
+                <i class="fa fa-user-circle" aria-hidden="true"></i>
+                  <p class="create-page-title">
+                      Person
+                  </p>
+              </span>
+                <p>
+                  Any Person.
+                <p>
+              </button>
+            </div>
+
+            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
               <button class="btn-1" (click)="loadcreatepage($event,'party')">
                 <span>
                 <i class="fa fa-flag" aria-hidden="true"></i>
