--- a/src/app/components/user/user/user2.component.css
+++ b/src/app/components/user/user/user2.component.css
@@ -120,7 +120,7 @@
   
   .profile-banner {
       width: 100%;
-      height: 300px;
+      height: 250px;
       background-position: center center;
       background-size: cover;
       position: relative;
@@ -180,8 +180,8 @@
   }
   
   .profile-avatar {
-      width: 200px;
-      height: 200px;
+      width: 150px;
+      height: 150px;
       border-radius: 50%;
       position: relative;
       margin: 0px auto;
@@ -194,9 +194,9 @@
       bottom: 20px;
   }
   
-  /* .user-profile-2 {
-      margin-top: 50px;
-  } */
+  .user-profile-2 {
+      width: 50%;
+  }
   
   .user-profile-sidebar {
       margin: 0 0 20px 0;
@@ -400,10 +400,9 @@
           padding-top: 102px;
         }  */
         .bottom-tabs{
-          position: -webkit-sticky;
-          left: 0px;
-          position: sticky;
-          bottom: 0px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
         .nav-tabs li{
             width: 33.33%;
@@ -417,11 +416,11 @@
       }
       .nav-tabs .active button{
           background-color: white;
-          border: 3px solid rgba(0,0,0,.125);
+          border: 1px solid rgba(0,0,0,.125);
           height: 50px;
           padding-bottom: 5px;
           width: 100%;
-          color:#007bff;
+          color:#070707;
       }
       .sticky-name{
           position: fixed;
@@ -643,3 +642,4 @@
     background: none !important;
   }
   
+ 
