--- a/src/app/components/security/login/login.component.css
+++ b/src/app/components/security/login/login.component.css
@@ -13,3 +13,7 @@
 #login .container #login-row #login-column #login-box #login-form #register-link {
   margin-top: -85px;
 }
+
+.loginOptionDivide{
+  text-align: center;
+}
