--- a/src/app/components/searchlegislators/searchlegislators.component.html
+++ b/src/app/components/searchlegislators/searchlegislators.component.html
@@ -46,10 +46,15 @@
         [ngClass]="{ 'btn-legis btn-legis-select': congressData, 'btn-legis btn-secondary': !congressData  }">Find</button>
     </div>
   </div> -->
+  <div *ngIf="address && !registration">
+    <div class="locationText">
+      Data based on the location <strong>{{address}}</strong>
+    </div>
+  </div>
 
   <div style="margin-top:5px" *ngIf="divisions && divisions.length > 0">
     <div class="sub-title sub-title-size">
-      <h6>LEVELS:</h6>
+      <strong>Level:</strong>
     </div>
     <div class="row" style="margin-left:1px">
       <span class="filterPill"><button class="btn button-color" [ngClass]="{'active': selectedDivision == division}" (click)="selectDivision(division);"
@@ -61,7 +66,7 @@
   </div>
   <div style="margin-top:5px" *ngIf="divisionOffices && divisionOffices.length > 0">
     <div class="sub-title sub-title-size">
-      <h6>ROLES:</h6>
+      <strong>Role:</strong>
     </div>
     <div class="row" style="margin-left:1px">
       <span class="filterPill"><button class="btn button-color" [ngClass]="{'active': selectedDivisionOffice == divisionOffice}"
@@ -83,70 +88,5 @@
 
 </div>
 
-  <!-- <div [ngClass]="{ 'row legisBoundary': divisions.length > 0, 'row': divisions.length < 1  }">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <ul class="nav">
-        <li class="nav-item border-right" *ngFor="let division of divisions">
-          <a class="nav-link search-legislator-navpills cursor-hand" (click)="selectDivision(division);return;">
-            <span class="badge badge-secondary active">{{division}}</span>
-          </a>
-        </li>
-
-      </ul>
-    </div>
-  </div>
-
-  <div [ngClass]="{ 'row legisBoundary': divisionOffices.length > 0, 'row': divisionOffices.length < 1  }">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <ul class="nav">
-        <li class="nav-item border-right" *ngFor="let divisionOffice of divisionOffices">
-          <a class="nav-link search-legislator-navpills cursor-hand" (click)="selectDivisionOffice(divisionOffice);return;">
-            <span class="badge badge-secondary active">{{divisionOffice}}</span>
-          </a>
-        </li>
-
-      </ul>
-    </div>
-  </div> -->
-        <!--
-        <div class="row">
-        
-          <div class="col-md-8 small-padd b-r">
-            <div class="form-group">
-              <div class="input-with-icon">
-                <app-g-address-search (setAddress)="getAddress($event)" adressType="geocode"></app-g-address-search>
-                <i class="ti-location-pin"></i>
-              </div>
-            </div>
-          </div>
-          
-           <div class="col-md-4 small-padd b-r">
-            <div class="form-group">
-              <div class="input-with-icon">
-                <input type="text" class="form-control" placeholder="Apt">
-                <i class="ti-search"></i>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-8 small-padd">
-            <div class="form-group">
-              <div class="input-with-icon">
-                <input type="text" class="form-control" placeholder="Email Address">
-                <i class="ti-envelope"></i>
-              </div>
-            </div>
-          </div> 
-          
-          <div class="col-md-4 small-padd search-btn-div">
-            <div class="form-group">
-              <div class="form-group">
-                <a href="#" class="btn btn-primary search-btn" (click)="loadCongressData()">{{searchBtnLabel}}</a>
-              </div>
-            </div>
-          </div>
-          
-        </div>
-        -->
 
 
