--- a/src/app/components/searchlegislators/searchlegislators.component.html
+++ b/src/app/components/searchlegislators/searchlegislators.component.html
@@ -5,7 +5,7 @@
         <div class="row">
           <div class="col-md-2"></div>
           <div class="col-md-8 banner-text" style="font-size: 22px;font-family: monospace;color:gainsboro;">
-            Find Representatives</div>
+            Find Your Representatives</div>
           <div class="col-md-2"></div>
         </div>
         <div class="row">
